# Dissertation

./: CMakeLists.txt  Crystal.cpp  Crystal.h  Electron.cpp  Electron.h  ElectronHole.cpp  ElectronHole.h  Functions.cpp  Functions.h  Position.cpp  README.md  Trap.cpp  Trap.h  main.cpp
Debug/: example.txt  plt.txt
Dokumentacja html/: _crystal_8h_source.html  _electron_8h_source.html  _electron_hole_8h_source.html  _functions_8h_source.html  _trap_8h_source.html  annotated.html  class_crystal-members.html  class_crystal.html  class_electron-members.html  class_electron.html  class_electron_hole-members.html  class_electron_hole.html  class_trap-members.html  class_trap.html  classes.html  dir_674d7ab1d7b5f25784874e319dd0965f.html  dir_7a6e2c98c33faa1f0a891979989fdbb2.html  dir_b0e6d1a32a208101f7801ba873e0c7a3.html  dir_d522931ffa1371640980b621734a4381.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  md__c_1__users_olav__clion_projects__dissertation__r_e_a_d_m_e.html  menudata.js  pages.html
Dokumentacja html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  (+11 more)
Praca pisemna/: Praca.aux  Praca.bcf  Praca.out  Praca.run.xml  Praca.tex  Praca.toc  bibliografia.aux  bibliografia.tex  implementacja.aux  implementacja.tex  podsumowanie.aux  podsumowanie.tex  rozwoj.aux  rozwoj.tex  technologie.aux  technologie.tex  tytul.aux  tytul.tex  wnioski.aux  wstep.aux  wstep.tex  wynik.aux  wynik.tex
tests/: test.h
